<resources>
    <string name="app_name">WorkoutCompanion</string>
    <string name="text_label_home">Home</string>
    <string name="text_label_routines">Routines</string>
    <string name="text_label_chat">Chat</string>
    <string name="text_label_diets">Diets</string>
    <string name="diet_header">Select your suitable diet</string>
    <string name="number_diet">9 diets available:</string>
    <string name="activity_title_chat">Messaging</string>
    <string name="activity_title_routines">Routines</string>
    <string name="nutrition_informations">Nutrition Informations</string>
    <string name="carbs_holder">carbs holder</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fat_holder">Fat holder</string>
    <string name="fat">Fat</string>
    <string name="protein_holder">Protein holder</string>
    <string name="protein">Protein</string>
    <string name="calories_holder">Calories holder</string>
    <string name="total_calories">Total Calories</string>
    <string name="info_about_meal_back">Info_about_Meal_back</string>
    <string name="description">Description</string>
    <string name="meal_piscture">Meal Piscture</string>
    <string name="meal_picture">Meal Picture</string>
    <string name="title">Title</string>
    <string name="amount_of_calories">amount of calories</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="height_m">height (m)</string>
    <string name="weight_kg">weight (kg)</string>
    <string name="gender">gender</string>
    <string name="age">age</string>
    <string name="phone_number">phone number</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="log_in">Log-in</string>
    <string name="load_avatar">Load Avatar</string>
    <string name="username">username</string>
    <string name="no_sensor">Step Counter sensor not available on your device!</string>
    <string name="channel_name">step_counter_service</string>
    <string name="channel_description">A step counter service notification</string>
    <string name="notice_title">Step Count</string>
    <string name="notice_text">Current number of steps counted %1d</string>
    <string name="number_of_steps">steps</string>
    <string name="distance_km">%1s km</string>
    <string name="calories_cal">%1s cal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="steps_label">Steps</string>
    <string name="tag_barchart">steps bar chart</string>
    <string name="daily_step_counts">Daily Step Counts</string>
    <string name="step_goals">/1500 steps</string>
    <string name="walking_acc">%1s m/s^2</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="minimum_calories">minimum calories</string>
    <string name="max_calories">max calories*</string>
    <string name="min_calories">min calories*</string>
    <string name="meal">Meal</string>
    <string name="gluten_free">Gluten-free</string>
    <string name="vegan">Vegan</string>
    <string name="lacto_vegan">Lacto-vegan</string>
    <string name="keto">Keto</string>
    <string name="ovo_vegan">Ovo-vegan</string>
    <string name="pescatrian">Pescatrian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole_30">Whole 30</string>
    <string name="gluten_free_image">Gluten-free image</string>
    <string name="vegan_image">Vegan image</string>
    <string name="lacto_vegan_image">Lacto vegan image</string>
    <string name="keto_image">Keto image</string>
    <string name="ovo_vegan_image">Ovo vegan image</string>
    <string name="pescatrian_image">Pescatrian image</string>
    <string name="paleo_diet_image">Paleo diet image</string>
    <string name="primal_diet_image">Primal diet image</string>
    <string name="whole_30_diet_image">Whole 30 diet image</string>
    <string name="counter_started">Step Counter Started!</string>
    <string name="page_title">WCompanion</string>
    <string name="more">more</string>
    <string name="content_description_more">more actions; play music, stop counter and start counter</string>
    <string name="start_walking">Start Working</string>
    <string name="content_description_walk">starts counting the user\'s steps as he/she walks</string>
    <string name="sign_out">Sign Out</string>
    <string name="music">Music</string>
    <string name="usernamE">Username</string>
    <string name="phone_numbeR">Phone Number</string>
    <string name="agE">Age</string>
    <string name="heighT">Height</string>
    <string name="textview">TextView</string>

    <string name="pieChart">pieChart</string>
    <string name="daily_cal_burned_walking">Daily calories burned during walk exercise</string>
    <string name="target_cal">Target\n <b>600</b> kcal</string>
    <string name="content_description_stop_walk">end physical activity and saves your step counts for the day</string>
    <string name="stop">Stops </string>
    <string name="start">Start</string>
    <string name="content_description_Start_walk">starts the step counter service</string>
    <string name="ok">connect</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="content_description_hrt">connect your deve to your external heart rate device to monitor your heart rate</string>
    <string name="tag_hrt">hrt</string>
    <string name="sanned">Scanned Heart Rate Sensors, Press To Select Device</string>
    <string name="hrt_mph">0.0 mph</string>
    <string name="is_matched">is a match</string>
    <string name="ble_disconnected">Device disconnected from HRT monitor!</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected to %1s</string>
    <string name="hrt_bpm">Heart Rate</string>
    <string name="label_hrt">Heart Rate, bpm</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="counter_started_already">Walking  Activity Started Already!</string>
    <string name="counter_stoped">Saving you Data...  counter stopped!</string>
    <string name="send_message_button">Send Message button</string>
    <string name="list_of_messages">List of messages</string>
    <string name="upload">Upload</string>
    <string name="take_picture_button">Take picture button</string>
    <string name="message">Message ...</string>
    <string name="mesage_field">Mesage field</string>
    <string name="music_animation">music animation</string>
    <string name="track_name">Track name</string>
    <string name="singer_name">Singer name</string>
    <string name="button">Button</string>
    <string name="shuffle_music_button">shuffle music button</string>
    <string name="play_music_button">Play music button</string>
    <string name="image_holder">Image holder</string>
    <string name="pick_image_button">Pick image button</string>
    <string name="username_field">Username field</string>
    <string name="password_field">Password field</string>
    <string name="email_field">Email field</string>
    <string name="register_button">REgister button</string>
    <string name="login_button">Login button</string>
    <string name="message_from_other_user">Message from other user</string>
    <string name="the_other_user_s_profile_image">the other user\'s profile image</string>
    <string name="this_is_my_message_that_will_wrap_into_multiple_lines_and_keep_on_going">This is my message that will wrap into multiple lines and keep on going</string>
    <string name="my_sent_message">My sent message</string>
    <string name="my_profile_image">My Profile image</string>
    <string name="save_button">Save button</string>
    <string name="update">Update</string>
    <string name="update_button">Update button</string>
    <string name="sign_out_button">Sign-out button</string>
    <string name="my_username">my username</string>
    <string name="my_age">My age</string>
    <string name="here_email">here email</string>
    <string name="my_email">My email</string>
    <string name="my_gender">My gender</string>
    <string name="my_phone_number">My phone number</string>
    <string name="my_height">My height</string>
    <string name="my_weight">My weight</string>
    <string name="cancel_button">Cancel button</string>
    <string name="profile">Profile</string>
    <string name="profile_text">profile text</string>
    <string name="user_information">User Information</string>
    <string name="the_other_user_s_profil_image">the other user\'s profilë image</string>
    <string name="the_image_sent_to_me">the Image sent to me</string>
    <string name="my_yprofile_image">My yprofile image</string>
    <string name="image_i_sent">Image i sent</string>
    <string name="user_s_image">User\'s image</string>
    <string name="latest_message">Latest Message</string>
    <string name="latest_message_received_or_sent">Latest message received or sent</string>
    <string name="gluten_free_card">Gluten free card</string>
    <string name="gluten_free1">Gluten free</string>
    <string name="vegan_card">Vegan Card</string>
    <string name="lacto_vegan_card">Lacto vegan card</string>
    <string name="lacto_vegan1">Lacto vegan</string>
    <string name="keto_card">Keto Card</string>
    <string name="ovo_vegan_card">Ovo vegan card</string>
    <string name="ovo_vegan1">Ovo vegan</string>
    <string name="pescatrian_card">Pescatrian card</string>
    <string name="paleo_card">Paleo card</string>
    <string name="primal_card">Primal card</string>
    <string name="whole_30_card">Whole 30 card</string>
    <string name="amount">amount</string>
    <string name="daily_needs">Daily Needs%</string>
    <string name="daily_needs1">Daily needs</string>
    <string name="amount_of_protein">Amount of protein</string>
    <string name="daily_needs_of_protein">Daily needs of protein</string>
    <string name="amount_of_fat">Amount of fat</string>
    <string name="daily_needs_of_fat">Daily needs of fat</string>
    <string name="amount_of_carbs">amount of carbs</string>
    <string name="daily_needs_of_carbs">Daily needs of carbs</string>
    <string name="summary_of_the_meal">summary of the meal</string>
    <string name="flip">Flip</string>
    <string name="total_calories1">Total calories</string>
    <string name="number_total_calories">number Total calories</string>
    <string name="nutrition_informations1">Nutrition informations</string>
    <string name="image_of_the_meal">Image of the meal</string>
    <string name="title_of_the_meal">Title of the meal</string>
    <string name="navigation_bar_left_is_home_center_is_diets_right_is_chat">Navigation bar left is home center is diets right is chat</string>
    <string name="meal_serch_field">Meal serch field</string>
    <string name="search">Search</string>
    <string name="search_button_for_meals">Search button for meals</string>
    <string name="minimum_calories_field">Minimum calories field</string>
    <string name="maximum_calories_field">Maximum calories field</string>
    <string name="username1">Username</string>
    <string name="username_text">Username text</string>
    <string name="image_of_the_user">image of the user</string>
    <string name="tag_scan">start scan</string>
    <string name="no_locaton">No fine location access</string>
    <string name="set_weight">Weight not Set; Go to profile and set  your weight to see calories!</string>


</resources>