<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp">

    <TextView
        android:id="@+id/textview_to_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_tochat"
        android:maxWidth="240dp"
        android:padding="16dp"
        android:text="@string/this_is_my_message_that_will_wrap_into_multiple_lines_and_keep_on_going"
        app:layout_constraintEnd_toStartOf="@+id/imageview_chat_to_row"
        app:layout_constraintTop_toTopOf="@+id/imageview_chat_to_row"
        android:contentDescription="@string/my_sent_message"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageview_chat_to_row"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:contentDescription="@string/my_profile_image"/>

</androidx.constraintlayout.widget.ConstraintLayout>