<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/Update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update"
        app:layout_constraintBottom_toBottomOf="@+id/Save_btn"
        app:layout_constraintEnd_toStartOf="@+id/Save_btn"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toEndOf="@+id/Cancel_btn"
        app:layout_constraintTop_toTopOf="@+id/Save_btn" />

    <ImageView
        android:id="@+id/image_user"
        android:layout_width="198dp"
        android:layout_height="158dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/Sighn_Out_btn"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_signout" />

    <ImageButton
        android:id="@+id/Settings_btn"
        android:layout_width="56dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_settings_24" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="374dp"
        android:layout_height="318dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="136dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_user"
        app:layout_constraintVertical_bias="0.682">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="65dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:text="@string/usernamE"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_Text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="65dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:text="@string/phone_numbeR"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Phone_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="65dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:text="@string/agE"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/age_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="65dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:text="@string/height_m"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/height_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="65dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:text="@string/weight_kg"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weight_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="65dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:text="@string/gender"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gender_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TextView"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/Cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93296856" />
</androidx.constraintlayout.widget.ConstraintLayout>